--- a/style.css
+++ b/style.css
@@ -11,4 +11,23 @@
   height: 500px;
   margin: auto;
   border-style: solid;
+  border-width: 1px;
+  margin-top: 40px;
+}
+
+#clearButton {
+  box-sizing: border-box;
+  display: block;
+  margin: auto;
+  border-radius: 0px;
+  border: solid;
+
+  padding: 0px;
+  width: 502px;
+  height: 40px;
+
+  color: green;
+  background-color: rgb(238, 238, 238);
+  border-color: black;
+  font-weight: bold;
 }
